[package]
name = "dprint"
version = "0.1.0"
authors = ["wcampbell0x2a", "RustyNixiTube"]
edition = "2021"
description = "print only in debug build"
documentation = "https://docs.rs/dprint"
readme = "README.md"
repository = "https://github.com/wcampbell0x2a/dprint"
license = "MIT/Apache-2.0"
keywords = ["debug", "print"]
categories = ["development-tools", "development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]
std = []
replace = []
